cherry picking fixes from bob for updated gto

--- a/reports/test-report.html
+++ b/reports/test-report.html
@@ -135,7 +135,7 @@
             -->
 
             <div class="report-info pull-right">
-                <span>Report Date:</span> 2018/04/03<br>
+                <span>Report Date:</span> 2018/04/04<br>
                 <span>Organism:</span> Eubacterium clonal population
             </div>
         </header>
@@ -157,8 +157,8 @@
             </p>
             <p>
                 The assembled genome has 1,166 contigs,
-                with the total length of ~2.67 Mbp and %GC of
-                42.16%.
+                with the total length of ~2.67 Mbp
+                and %GC of 42.16%.
             </p>
 
             <table class="sm-table kv-table center">
@@ -185,7 +185,7 @@
                     </tr><tr>
                     </tr>
                         <tr><td>Contig L50</td>
-                        <td class="align-right">0</td>
+                        <td class="align-right">214</td>
                     </tr>
                     <tr>
                         <td>Genome Length</td>
@@ -196,7 +196,7 @@
                     <tr>
                         <td>Contig N50</td>
                         <td class="align-right">
-                            0
+                            3,716
                         </td>
                     </tr>
                     <tr>
@@ -220,9 +220,10 @@
                 The Genetic code was 11.  The taxonomy of Eubacterium clonal population is:
             </p>
 
-            <div style="width: 90%;" class="center">
-                
-            </div><br>
+            <div style="width: 90%;" class="center-table">
+	    	   cellular organisms  &gt;   Bacteria  &gt;   Terrabacteria group  &gt;   Firmicutes  &gt;   Clostridia  &gt;   Clostridiales  &gt;   Eubacteriaceae  &gt;   Eubacterium  &gt;   environmental samples  &gt;   Eubacterium rectale CAG  
+            </div>
+            <br>
 
             <p>
                 The annotations includes
