--- a/reports/test-report.html
+++ b/reports/test-report.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-        <title>PATRIC Genome Report | buchnear 2</title>
+        <title>PATRIC Genome Report | Eubacterium clonal population</title>
 
         <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700,800,900" rel="stylesheet">
 
@@ -138,8 +138,8 @@
             -->
 
             <div class="report-info pull-right">
-                <span>Report Date:</span> 2018/03/28<br>
-                <span>Organism:</span> buchnear 2
+                <span>Report Date:</span> 2018/03/29<br>
+                <span>Organism:</span> Eubacterium clonal population
             </div>
         </header>
 
@@ -149,7 +149,7 @@
         <section>
             <h2>Genome Assembly</h2>
             <p>
-                buchnear 2 ran under job ID 2fee1c1b-f8bb-4781-bb20-f08fa66398e1 at PATRIC[1].
+                Eubacterium clonal population ran under job ID 2fee1c1b-f8bb-4781-bb20-f08fa66398e1 at PATRIC[1].
                 The assembly job started at 10/6/17, 2:53 PM and completed at 10/7/17, 4:41 PM, after 25h 47m 90011s.
                 The auto assembly strategy was selected, and it runs BayesHammer [2] on short reads, followed by three
                 assembly strategies that include Velvet [3], IDBA [4] and Spades [5], each of which is given
@@ -159,15 +159,16 @@
                 Also add reference to QUAST. ARAST ranked the Spades assembly best (<table-ref>Table 1</table-ref>).
             </p>
             <p>
-                The assembled genome has 1 contigs,
-                with the total length of ~615.98 Kbps and %GC of 25.34%.
+                The assembled genome has 1,166 contigs,
+                with the total length of ~2.67 Mbp and %GC of
+                42.16%.
             </p>
 
             <table class="sm-table kv-table center-table">
                 <thead class="table-header">
                     <tr>
                         <th colspan="4">
-                            <table-num>Table 1.</table-num> Assembly details for buchnear 2
+                            <table-num>Table 1.</table-num> Assembly details for Eubacterium clonal population
                         </th>
                     </tr>
                 </thead>
@@ -175,35 +176,35 @@
                 <tbody>
                     <tr>
                         <td>Contigs</td>
-                        <td class="align-right">1</td>
+                        <td class="align-right">1,166</td>
                     </tr>
                     <tr>
                         <td>GC Content</td>
-                        <td class="align-right">25.34</td>
+                        <td class="align-right">42.16</td>
                     </tr>
                     <tr>
                         <td>Plasmids</td>
-                        <td class="align-right">-</td>
+                        <td class="align-right">0</td>
                     </tr><tr>
                     </tr>
                         <tr><td>Contig L50</td>
-                        <td class="align-right">1</td>
+                        <td class="align-right">0</td>
                     </tr>
                     <tr>
                         <td>Genome Length</td>
                         <td class="align-right">
-                            615,980 Bps
+                            2,666,248 Bps
                         </td>
                     </tr>
                     <tr>
                         <td>Contig N50</td>
                         <td class="align-right">
-                            615,980
+                            0
                         </td>
                     </tr>
                     <tr>
                         <td>Chromosomes</td>
-                        <td class="align-right">-</td>
+                        <td class="align-right">0</td>
                     </tr>
                 </tbody>
             </table>
@@ -215,11 +216,11 @@
             <h2>Genome Annotation</h2>
             <p>
                 The Genome Annotation Service in PATRIC [1] uses the RAST tool kit (RASTtk) [6] to
-                provide annotation of genomic features. The job for buchnear 2
+                provide annotation of genomic features. The job for Eubacterium clonal population
                 ran under job number 685fb8c1-348a-4cea-a298-496b037af1f8.
                 The annotation job started at 10/9/17, 7:10 AM and completed at 10/9/17, 8:16 AM,
                 after 1h 5m 3623s.  The selected domain was Bacteria, the Taxonomy ID was 234.128.
-                The Genetic code was 11.  The taxonomy of buchnear 2 is:
+                The Genetic code was 11.  The taxonomy of Eubacterium clonal population is:
             </p>
 
             <div style="width: 90%;" class="center-table">
@@ -228,20 +229,20 @@
 
             <p>
                 The annotations includes
-                    536 CDS,
-                    32 tRNAs and
-                    3 rRNAs.
+                    3,417 CDS,
+                    36 tRNAs and
+                    0 rRNAs.
 
                 All annotated genome features for this genome are summarized in <table-ref>Table 2</table-ref>.
             </p>
 
             <p>
                 The functional annotation included
-                    49 hypothetical proteins and
-                    487 proteins with functional assignments.
+                    1,071 hypothetical proteins and
+                    2,346 proteins with functional assignments.
                 Furthermore,
-                    268 proteins were assigned EC numbers and
-                    204 proteins were mapped to KEGG pathways.
+                    947 proteins were assigned EC numbers and
+                    692 proteins were mapped to KEGG pathways.
 
                 A breakdown of the proteins that have been annotated for this isolate is provided in <table-ref>Table 3</table-ref>.
             </p>
@@ -258,19 +259,37 @@
                         <tr>
                             <td>CDS</td>
                             <td class="align-right">
-                                536
+                                3,417
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Partial CDS</td>
+                            <td class="align-right">
+                                0
                             </td>
                         </tr>
                         <tr>
                             <td>tRNA</td>
                             <td class="align-right">
-                                32
+                                36
                             </td>
                         </tr>
                         <tr>
                             <td>rRNA</td>
                             <td class="align-right">
-                                3
+                                0
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Miscellaneous RNA</td>
+                            <td class="align-right">
+                                0
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Repeat Regions</td>
+                            <td class="align-right">
+                                40
                             </td>
                         </tr>
                 </tbody>
@@ -289,37 +308,43 @@
                     <tr>
                         <td>Proteins with PATRIC cross-genus family (PGfam) assignments</td>
                         <td class="align-right">
-                            516
+                            3,125
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Proteins with PATRIC genus-specific family (PLfam) assignments</td>
+                        <td class="align-right">
+                            3,028
                         </td>
                     </tr>
                     <tr>
                         <td>Proteins with functional assignments</td>
                         <td class="align-right">
-                            487
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Proteins with EC number assignments</td>
-                        <td class="align-right">
-                            268
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Proteins with GO assignments</td>
-                        <td class="align-right">
-                            224
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Proteins with Pathway assignments</td>
-                        <td class="align-right">
-                            204
+                            2,346
                         </td>
                     </tr>
                     <tr>
                         <td>Hypothetical proteins</td>
                         <td class="align-right">
-                            49
+                            1,071
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Proteins with EC number assignments</td>
+                        <td class="align-right">
+                            947
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Proteins with GO assignments</td>
+                        <td class="align-right">
+                            796
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Proteins with Pathway assignments</td>
+                        <td class="align-right">
+                            692
                         </td>
                     </tr>
                 </tbody>
@@ -373,19 +398,24 @@
                         <td class="align-right">Genes</td>
                     </tr>
                     <tr>
-                        <td>Drug Target</td>
-                        <td>DrugBank</td>
-                        <td class="align-right">5</td>
-                    </tr>
-                    <tr>
                         <td>Virulence Factor</td>
                         <td>Victors</td>
+                        <td class="align-right">4</td>
+                    </tr>
+                    <tr>
+                        <td>Drug Target</td>
+                        <td>DrugBank</td>
+                        <td class="align-right">3</td>
+                    </tr>
+                    <tr>
+                        <td>Antibiotic Resistance</td>
+                        <td>CARD</td>
                         <td class="align-right">2</td>
                     </tr>
                     <tr>
-                        <td>Transporter</td>
-                        <td>TCDB</td>
-                        <td class="align-right">2</td>
+                        <td></td>
+                        <td>Victors</td>
+                        <td class="align-right">1</td>
                     </tr>
                     <tr>
                         <td>Drug Target</td>
@@ -393,13 +423,8 @@
                         <td class="align-right">1</td>
                     </tr>
                     <tr>
-                        <td>Antibiotic Resistance</td>
-                        <td>CARD</td>
-                        <td class="align-right">1</td>
-                    </tr>
-                    <tr>
-                        <td>Virulence Factor</td>
-                        <td>PATRIC_VF</td>
+                        <td>Transporter</td>
+                        <td>TCDB</td>
                         <td class="align-right">1</td>
                     </tr>
                 </tbody>
