update css class

--- a/reports/test-report.html
+++ b/reports/test-report.html
@@ -220,10 +220,11 @@
                 The Genetic code was 11.  The taxonomy of Eubacterium clonal population is:
             </p>
 
-            <div style="width: 90%;" class="center-table">
-	    	   cellular organisms  &gt;   Bacteria  &gt;   Terrabacteria group  &gt;   Firmicutes  &gt;   Clostridia  &gt;   Clostridiales  &gt;   Eubacteriaceae  &gt;   Eubacterium  &gt;   environmental samples  &gt;   Eubacterium rectale CAG  
+            <div style="width: 90%;" class="center">
+	    	         cellular organisms  &gt;   Bacteria  &gt;   Terrabacteria group  &gt;   Firmicutes  &gt;   Clostridia  &gt;   Clostridiales  &gt;   Eubacteriaceae  &gt;   Eubacterium  &gt;   environmental samples  &gt;   Eubacterium rectale CAG  
             </div>
             <br>
+
 
             <p>
                 The annotations includes
