format annotation times as well

--- a/reports/test-report-amr.html
+++ b/reports/test-report-amr.html
@@ -205,12 +205,12 @@
                 The Genome Annotation Service in PATRIC [1] uses the RAST tool kit (RASTtk) [6] to
                 provide annotation of genomic features. The job for Staphylococcus aureus strain VB4283
                 ran under job number .
-                The annotation job started at 
-        and completed at 
-        after  seconds.
-        This genome was described to be in the domain Bacteria
-        with genetic code 11. It was assigned genome identifier
-        1280.15678. The taxonomy of Staphylococcus aureus strain VB4283 is:
+                The annotation job started at April 11th 2018, 5:13:44pm
+                and completed at April 11th 2018, 5:13:44pm
+                after 0 seconds.
+                This genome was described to be in the domain Bacteria
+                with genetic code 11. It was assigned genome identifier
+                1280.15678. The taxonomy of Staphylococcus aureus strain VB4283 is:
             </p>
 
             <div style="width: 90%;" class="center">
