--- a/reports/test-report.html
+++ b/reports/test-report.html
@@ -221,7 +221,8 @@
                 The annotation job started at March 14th 2018, 3:15:46pm
                 and completed at March 14th 2018, 3:23:06pm
                 after 7 minutes and 20 seconds seconds.
-                This genome was described to be in the domain B
+                This genome was described to be in the domain
+                bateria
                 with genetic code 11. It was assigned genome identifier
                 2.1368. The taxonomy of Toy box is:
             </p>
