--- a/reports/test-report.html
+++ b/reports/test-report.html
@@ -222,7 +222,7 @@
                 and completed at March 14th 2018, 3:23:06pm
                 after 7 minutes and 20 seconds seconds.
                 This genome was described to be in the domain
-                bateria
+                Bateria
                 with genetic code 11. It was assigned genome identifier
                 2.1368. The taxonomy of Toy box is:
             </p>
