--- a/reports/test-report.html
+++ b/reports/test-report.html
@@ -76,14 +76,14 @@
             .center { margin-left: auto; margin-right: auto; }
 
             .logo {
-                width: 3in;
+                width: 2.5in;
                 border-right: 3px solid #777;
                 padding-right: 10px;
                 margin-right: 10px;
             }
             .title {
-                padding: 15px 0 0 0px;
-                font-size: 2.0em;
+                padding: 10px 0 0 0px;
+                font-size: 1.3em;
                 color: #777;
             }
             .report-info {
@@ -135,7 +135,7 @@
             -->
 
             <div class="report-info pull-right">
-                <span>Report Date:</span> 2018/04/11<br>
+                <span>Report Date:</span> 2018/04/17<br>
                 <span>Organism:</span> Toy box
             </div>
         </header>
@@ -156,11 +156,11 @@
                     
                     and contigs with less coverage were not included in the assembly.
                     Also add reference to QUAST. ARAST ranked the &quot;spades&quot;
-                    assembly as the highest quality.  (<table-ref>Table 1</table-ref>).
+                    assembly as the highest qualitye (<table-ref>Table 1</table-ref>).
                 </p>
             <p>
                 The assembled genome has 10 contigs,
-                with the total length of ~20.29 Kbps
+                with the total length of ~20.29 Kbp
                 and %GC of 52.74%.
             </p>
 
@@ -168,7 +168,7 @@
                 <thead class="table-header">
                     <tr>
                         <th colspan="4">
-                            <table-num>Table 1.</table-num> Assembly details for Toy box
+                            <table-num>Table 1.</table-num> Assembly Details
                         </th>
                     </tr>
                 </thead>
@@ -193,7 +193,7 @@
                     <tr>
                         <td>Genome Length</td>
                         <td class="align-right">
-                            20,288 Bps
+                            20,288 Bp
                         </td>
                     </tr>
                     <tr>
@@ -222,7 +222,7 @@
                 and completed at March 14th 2018, 3:23:06pm
                 after 7 minutes and 20 seconds seconds.
                 This genome was described to be in the domain
-                Bateria
+                Bacteria
                 with genetic code 11. It was assigned genome identifier
                 2.1368. The taxonomy of Toy box is:
             </p>
@@ -374,11 +374,13 @@
                 Based on the analysis of genome assembly and annotation statistics and comparing
                 them to other closely related genomes available in PATRIC for the same species, the
                 overall genome seems to be of <i>Poor</i> quality.
-                The reasons affecting the quality of genome follows:<br>
-                <br>
-
+            </p>
+            <p>
+                    The reasons affecting the quality of genome follows:
                 <i>Genome too short, Low CheckM completeness score, Abnormal CDS ratio</i>
             </p>
+
+
         </section>
 
 
