--- a/reports/test-report-amr.html
+++ b/reports/test-report-amr.html
@@ -76,14 +76,14 @@
             .center { margin-left: auto; margin-right: auto; }
 
             .logo {
-                width: 3in;
+                width: 2.5in;
                 border-right: 3px solid #777;
                 padding-right: 10px;
                 margin-right: 10px;
             }
             .title {
-                padding: 15px 0 0 0px;
-                font-size: 2.0em;
+                padding: 10px 0 0 0px;
+                font-size: 1.3em;
                 color: #777;
             }
             .report-info {
@@ -135,7 +135,7 @@
             -->
 
             <div class="report-info pull-right">
-                <span>Report Date:</span> 2018/04/11<br>
+                <span>Report Date:</span> 2018/04/17<br>
                 <span>Organism:</span> Staphylococcus aureus strain VB4283
             </div>
         </header>
@@ -155,7 +155,7 @@
                 <thead class="table-header">
                     <tr>
                         <th colspan="4">
-                            <table-num>Table 1.</table-num> Assembly details for Staphylococcus aureus strain VB4283
+                            <table-num>Table 1.</table-num> Assembly Details
                         </th>
                     </tr>
                 </thead>
@@ -180,7 +180,7 @@
                     <tr>
                         <td>Genome Length</td>
                         <td class="align-right">
-                            2,796,422 Bps
+                            2,796,422 Bp asdf
                         </td>
                     </tr>
                     <tr>
@@ -205,10 +205,11 @@
                 The Genome Annotation Service in PATRIC [1] uses the RAST tool kit (RASTtk) [6] to
                 provide annotation of genomic features. The job for Staphylococcus aureus strain VB4283
                 ran under job number .
-                The annotation job started at April 11th 2018, 5:13:44pm
-                and completed at April 11th 2018, 5:13:44pm
+                The annotation job started at April 17th 2018, 1:18:22pm
+                and completed at April 17th 2018, 1:18:22pm
                 after 0 seconds.
-                This genome was described to be in the domain Bacteria
+                This genome was described to be in the domain
+                
                 with genetic code 11. It was assigned genome identifier
                 1280.15678. The taxonomy of Staphylococcus aureus strain VB4283 is:
             </p>
@@ -360,11 +361,12 @@
                 Based on the analysis of genome assembly and annotation statistics and comparing
                 them to other closely related genomes available in PATRIC for the same species, the
                 overall genome seems to be of <i>Good</i> quality.
-                The reasons affecting the quality of genome follows:<br>
-                <br>
-
+            </p>
+            <p>
                 <i></i>
             </p>
+
+
         </section>
 
 
@@ -484,7 +486,7 @@
             <!--<img src="..//-subsystem.svg" class="subsystem-fig" />-->
 
             <fig-num>Figure 2</fig-num>
-            <div class="center subsystem-fig"><svg class="pie" width="800" height="300"><g class="container"><g transform="translate(155,150)"><g><path d="M8.878689293818311e-15,-145A145,145,0,0,1,126.17664442708123,71.44546452450227L0,0Z" fill="#1f77b4" style="opacity: 0.8; stroke: white;"/></g><g><path d="M126.17664442708123,71.44546452450227A145,145,0,0,1,7.285426136066592,144.81685870787254L0,0Z" fill="#ff7f0e" style="opacity: 0.8; stroke: white;"/></g><g><path d="M7.285426136066592,144.81685870787254A145,145,0,0,1,-111.72442020248945,92.42647851355999L0,0Z" fill="#2ca02c" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-111.72442020248945,92.42647851355999A145,145,0,0,1,-144.71387562209938,9.104625331750405L0,0Z" fill="#d62728" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-144.71387562209938,9.104625331750405A145,145,0,0,1,-132.70997003003302,-58.42143317848118L0,0Z" fill="#9467bd" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-132.70997003003302,-58.42143317848118A145,145,0,0,1,-104.4448086087464,-100.57972934285682L0,0Z" fill="#8c564b" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-104.4448086087464,-100.57972934285682A145,145,0,0,1,-73.02536423718523,-125.26889549296116L0,0Z" fill="#e377c2" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-73.02536423718523,-125.26889549296116A145,145,0,0,1,-36.060033638903896,-140.4445583636515L0,0Z" fill="#7f7f7f" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-36.060033638903896,-140.4445583636515A145,145,0,0,1,-21.782710422509727,-143.35450298699755L0,0Z" fill="#bcbd22" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-21.782710422509727,-143.35450298699755A145,145,0,0,1,-10.922386801550235,-144.58804053778903L0,0Z" fill="#17becf" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-10.922386801550235,-144.58804053778903A145,145,0,0,1,-3.643863839283863,-144.9542074460785L0,0Z" fill="#1f77b4" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-3.643863839283863,-144.9542074460785A145,145,0,0,1,1.0214980297506323e-13,-145L0,0Z" fill="#ff7f0e" style="opacity: 0.8; stroke: white;"/></g></g><g class="legend"><text font-weight="500" transform="translate(340, 20)">Subsystem (Subsystems, Genes)</text><g transform="translate(340, 50)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #1f77b4;"/><text class="name" x="17" y="0">Metabolism (83, 538)</text></g><g transform="translate(340, 70)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #ff7f0e;"/><text class="name" x="17" y="0">Protein Processing (40, 211)</text></g><g transform="translate(340, 90)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #2ca02c;"/><text class="name" x="17" y="0">Stress Response, Defense, Virulence (37, 152)</text></g><g transform="translate(340, 110)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #d62728;"/><text class="name" x="17" y="0">Energy (25, 181)</text></g><g transform="translate(340, 130)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #9467bd;"/><text class="name" x="17" y="0">DNA Processing (19, 84)</text></g><g transform="translate(340, 150)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #8c564b;"/><text class="name" x="17" y="0">Cellular Processes (14, 91)</text></g><g transform="translate(340, 170)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #e377c2;"/><text class="name" x="17" y="0">Membrane Transport (11, 58)</text></g><g transform="translate(340, 190)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #7f7f7f;"/><text class="name" x="17" y="0">RNA Processing (11, 45)</text></g><g transform="translate(340, 210)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #bcbd22;"/><text class="name" x="17" y="0">Regulation And Cell Signaling (4, 16)</text></g><g transform="translate(340, 230)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #17becf;"/><text class="name" x="17" y="0">Miscellaneous (3, 6)</text></g><g transform="translate(340, 250)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #1f77b4;"/><text class="name" x="17" y="0">Cell Envelope (2, 7)</text></g><g transform="translate(340, 270)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #ff7f0e;"/><text class="name" x="17" y="0"> (1, 7)</text></g></g></g></svg></div>
+            <div class="center subsystem-fig"><svg class="pie" width="800" height="300"><g class="container"><g transform="translate(155,150)"><g><path d="M8.878689293818311e-15,-145A145,145,0,0,1,126.17664442708123,71.44546452450227L0,0Z" fill="#1f77b4" style="opacity: 0.8; stroke: white;"/></g><g><path d="M126.17664442708123,71.44546452450227A145,145,0,0,1,7.285426136066592,144.81685870787254L0,0Z" fill="#ff7f0e" style="opacity: 0.8; stroke: white;"/></g><g><path d="M7.285426136066592,144.81685870787254A145,145,0,0,1,-111.72442020248945,92.42647851355999L0,0Z" fill="#2ca02c" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-111.72442020248945,92.42647851355999A145,145,0,0,1,-144.71387562209938,9.104625331750405L0,0Z" fill="#d62728" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-144.71387562209938,9.104625331750405A145,145,0,0,1,-132.70997003003302,-58.42143317848118L0,0Z" fill="#9467bd" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-132.70997003003302,-58.42143317848118A145,145,0,0,1,-104.4448086087464,-100.57972934285682L0,0Z" fill="#8c564b" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-104.4448086087464,-100.57972934285682A145,145,0,0,1,-73.02536423718523,-125.26889549296116L0,0Z" fill="#e377c2" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-73.02536423718523,-125.26889549296116A145,145,0,0,1,-36.060033638903896,-140.4445583636515L0,0Z" fill="#7f7f7f" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-36.060033638903896,-140.4445583636515A145,145,0,0,1,-21.782710422509727,-143.35450298699755L0,0Z" fill="#bcbd22" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-21.782710422509727,-143.35450298699755A145,145,0,0,1,-10.922386801550235,-144.58804053778903L0,0Z" fill="#17becf" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-10.922386801550235,-144.58804053778903A145,145,0,0,1,-3.643863839283863,-144.9542074460785L0,0Z" fill="#aec7e8" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-3.643863839283863,-144.9542074460785A145,145,0,0,1,1.0214980297506323e-13,-145L0,0Z" fill="#ffbb78" style="opacity: 0.8; stroke: white;"/></g></g><g class="legend"><text font-weight="500" transform="translate(340, 20)">Subsystem (Subsystems, Genes)</text><g transform="translate(340, 50)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #1f77b4;"/><text class="name" x="17" y="0">Metabolism (83, 538)</text></g><g transform="translate(340, 70)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #ff7f0e;"/><text class="name" x="17" y="0">Protein Processing (40, 211)</text></g><g transform="translate(340, 90)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #2ca02c;"/><text class="name" x="17" y="0">Stress Response, Defense, Virulence (37, 152)</text></g><g transform="translate(340, 110)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #d62728;"/><text class="name" x="17" y="0">Energy (25, 181)</text></g><g transform="translate(340, 130)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #9467bd;"/><text class="name" x="17" y="0">DNA Processing (19, 84)</text></g><g transform="translate(340, 150)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #8c564b;"/><text class="name" x="17" y="0">Cellular Processes (14, 91)</text></g><g transform="translate(340, 170)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #e377c2;"/><text class="name" x="17" y="0">Membrane Transport (11, 58)</text></g><g transform="translate(340, 190)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #7f7f7f;"/><text class="name" x="17" y="0">RNA Processing (11, 45)</text></g><g transform="translate(340, 210)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #bcbd22;"/><text class="name" x="17" y="0">Regulation And Cell Signaling (4, 16)</text></g><g transform="translate(340, 230)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #17becf;"/><text class="name" x="17" y="0">Miscellaneous (3, 6)</text></g><g transform="translate(340, 250)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #aec7e8;"/><text class="name" x="17" y="0">Cell Envelope (2, 7)</text></g><g transform="translate(340, 270)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #ffbb78;"/><text class="name" x="17" y="0"> (1, 7)</text></g></g></g></svg></div>
         </section>
 
 
