move table reference (fixing numbers when there is no assembly job details

--- a/reports/test-report-amr.html
+++ b/reports/test-report-amr.html
@@ -106,7 +106,6 @@
             }
 
             .circular-view-fig {
-                /*width: 5in;*/
                 height: 100%;
                 width: 100%;
             }
@@ -142,7 +141,7 @@
             -->
 
             <div class="report-info pull-right">
-                <span>Report Date:</span> 2018/04/20<br>
+                <span>Report Date:</span> 2018/04/21<br>
                 <span>Organism:</span> Staphylococcus aureus strain VB4283
             </div>
         </header>
@@ -155,7 +154,7 @@
             <p>
                 The assembled genome has 78 contigs,
                 with the total length of ~2.8 Mbp
-                and %GC of 32.70%.
+                and %GC of 32.70% (<table-ref>Table 1</table-ref>).
             </p>
 
             <table class="sm-table kv-table center">
@@ -212,8 +211,8 @@
                 The Genome Annotation Service in PATRIC [1] uses the RAST tool kit (RASTtk) [6] to
                 provide annotation of genomic features. The job for Staphylococcus aureus strain VB4283
                 ran under job number .
-                The annotation job started at April 20th 2018, 6:01:02pm
-                and completed at April 20th 2018, 6:01:02pm
+                The annotation job started at April 20th 2018, 7:00:19pm
+                and completed at April 20th 2018, 7:00:19pm
                 after 0 seconds.
                 This genome was described to be in the domain
                 
@@ -233,7 +232,7 @@
                     56 tRNAs and
                     8 rRNAs.
 
-                All annotated genome features for this genome are summarized in <table-ref>Table 1</table-ref>.
+                All annotated genome features for this genome are summarized in <table-ref>Table 2</table-ref>.
             </p>
 
             <p>
@@ -244,7 +243,7 @@
                     766 proteins were assigned EC numbers and
                     556 proteins were mapped to KEGG pathways.
 
-                A breakdown of the proteins that have been annotated for this isolate is provided in <table-ref>Table 2</table-ref>.
+                A breakdown of the proteins that have been annotated for this isolate is provided in <table-ref>Table 3</table-ref>.
             </p>
 
             <table class="sm-table kv-table center">
@@ -11229,7 +11228,7 @@
             <p>
                 PATRIC [1] annotation also includes identification of proteins that have homology to
                 known virulence factors, drug targets, and antibiotic resistance genes (Reference
-                the sources).  A breakdown of the distribution is provided (<table-ref>Table 3</table-ref>).
+                the sources).  A breakdown of the distribution is provided (<table-ref>Table 4</table-ref>).
             </p>
 
             <table class="sm-table kv-table center">
@@ -11337,7 +11336,7 @@
             </p>
 
             <fig-num>Figure 2</fig-num>
-            <div class="center subsystem-fig"><svg class="pie" width="800" height="300"><g class="container"><g transform="translate(155,150)"><g><path d="M8.878689293818311e-15,-145A145,145,0,0,1,126.17664442708123,71.44546452450227L0,0Z" fill="#ff7f0e" style="opacity: 0.8; stroke: white;"/></g><g><path d="M126.17664442708123,71.44546452450227A145,145,0,0,1,7.285426136066592,144.81685870787254L0,0Z" fill="#1f77b4" style="opacity: 0.8; stroke: white;"/></g><g><path d="M7.285426136066592,144.81685870787254A145,145,0,0,1,-111.72442020248945,92.42647851355999L0,0Z" fill="#2ca02c" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-111.72442020248945,92.42647851355999A145,145,0,0,1,-144.71387562209938,9.104625331750405L0,0Z" fill="#d62728" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-144.71387562209938,9.104625331750405A145,145,0,0,1,-132.70997003003302,-58.42143317848118L0,0Z" fill="#8c564b" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-132.70997003003302,-58.42143317848118A145,145,0,0,1,-104.4448086087464,-100.57972934285682L0,0Z" fill="#7f7f7f" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-104.4448086087464,-100.57972934285682A145,145,0,0,1,-73.02536423718523,-125.26889549296116L0,0Z" fill="#e377c2" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-73.02536423718523,-125.26889549296116A145,145,0,0,1,-36.060033638903896,-140.4445583636515L0,0Z" fill="#9467bd" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-36.060033638903896,-140.4445583636515A145,145,0,0,1,-21.782710422509727,-143.35450298699755L0,0Z" fill="#17becf" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-21.782710422509727,-143.35450298699755A145,145,0,0,1,-10.922386801550235,-144.58804053778903L0,0Z" fill="#bcbd22" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-10.922386801550235,-144.58804053778903A145,145,0,0,1,-3.643863839283863,-144.9542074460785L0,0Z" fill="#aec7e8" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-3.643863839283863,-144.9542074460785A145,145,0,0,1,1.0214980297506323e-13,-145L0,0Z" fill="#ffbb78" style="opacity: 0.8; stroke: white;"/></g></g><g class="legend"><text font-weight="500" transform="translate(340, 20)">Subsystem (Subsystems, Genes)</text><g transform="translate(340, 50)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #ff7f0e;"/><text class="name" x="17" y="0">Metabolism (83, 538)</text></g><g transform="translate(340, 70)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #1f77b4;"/><text class="name" x="17" y="0">Protein Processing (40, 211)</text></g><g transform="translate(340, 90)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #2ca02c;"/><text class="name" x="17" y="0">Stress Response, Defense, Virulence (37, 152)</text></g><g transform="translate(340, 110)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #d62728;"/><text class="name" x="17" y="0">Energy (25, 181)</text></g><g transform="translate(340, 130)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #8c564b;"/><text class="name" x="17" y="0">DNA Processing (19, 84)</text></g><g transform="translate(340, 150)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #7f7f7f;"/><text class="name" x="17" y="0">Cellular Processes (14, 91)</text></g><g transform="translate(340, 170)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #e377c2;"/><text class="name" x="17" y="0">Membrane Transport (11, 58)</text></g><g transform="translate(340, 190)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #9467bd;"/><text class="name" x="17" y="0">RNA Processing (11, 45)</text></g><g transform="translate(340, 210)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #17becf;"/><text class="name" x="17" y="0">Regulation And Cell Signaling (4, 16)</text></g><g transform="translate(340, 230)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #bcbd22;"/><text class="name" x="17" y="0">Miscellaneous (3, 6)</text></g><g transform="translate(340, 250)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #aec7e8;"/><text class="name" x="17" y="0">Cell Envelope (2, 7)</text></g><g transform="translate(340, 270)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #ffbb78;"/><text class="name" x="17" y="0"> (1, 7)</text></g></g></g></svg></div>
+            <div class="center subsystem-fig"><svg class="pie" width="800" height="300"><g class="container"><g transform="translate(155,150)"><g><path d="M8.878689293818311e-15,-145A145,145,0,0,1,125.57368354874362,72.49999999999997L0,0Z" fill="#ff7f0e" style="opacity: 0.8; stroke: white;"/></g><g><path d="M125.57368354874362,72.49999999999997A145,145,0,0,1,5.4870141240622665,144.89614444836806L0,0Z" fill="#1f77b4" style="opacity: 0.8; stroke: white;"/></g><g><path d="M5.4870141240622665,144.89614444836806A145,145,0,0,1,-113.20243259967684,90.610205018616L0,0Z" fill="#2ca02c" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-113.20243259967684,90.610205018616A145,145,0,0,1,-144.85864714910056,6.400964468920271L0,0Z" fill="#d62728" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-144.85864714910056,6.400964468920271A145,145,0,0,1,-131.47898608812753,-61.14144435027659L0,0Z" fill="#8c564b" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-131.47898608812753,-61.14144435027659A145,145,0,0,1,-102.20657114540663,-102.85337531991323L0,0Z" fill="#7f7f7f" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-102.20657114540663,-102.85337531991323A145,145,0,0,1,-70.11064452795608,-126.9231953737164L0,0Z" fill="#e377c2" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-70.11064452795608,-126.9231953737164A145,145,0,0,1,-32.64761137579054,-141.27679735701597L0,0Z" fill="#9467bd" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-32.64761137579054,-141.27679735701597A145,145,0,0,1,-18.245917181908556,-143.84744177840264L0,0Z" fill="#17becf" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-18.245917181908556,-143.84744177840264A145,145,0,0,1,-7.314660080880354,-144.8153850524908L0,0Z" fill="#bcbd22" style="opacity: 0.8; stroke: white;"/></g><g><path d="M-7.314660080880354,-144.8153850524908A145,145,0,0,1,1.0214980297506323e-13,-145L0,0Z" fill="#aec7e8" style="opacity: 0.8; stroke: white;"/></g></g><g class="legend"><text font-weight="500" transform="translate(340, 20)">Subsystem (Subsystems, Genes)</text><g transform="translate(340, 50)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #ff7f0e;"/><text class="name" x="17" y="0">Metabolism (83, 538)</text></g><g transform="translate(340, 70)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #1f77b4;"/><text class="name" x="17" y="0">Protein Processing (40, 211)</text></g><g transform="translate(340, 90)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #2ca02c;"/><text class="name" x="17" y="0">Stress Response, Defense, Virulence (37, 152)</text></g><g transform="translate(340, 110)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #d62728;"/><text class="name" x="17" y="0">Energy (25, 181)</text></g><g transform="translate(340, 130)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #8c564b;"/><text class="name" x="17" y="0">DNA Processing (19, 84)</text></g><g transform="translate(340, 150)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #7f7f7f;"/><text class="name" x="17" y="0">Cellular Processes (14, 91)</text></g><g transform="translate(340, 170)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #e377c2;"/><text class="name" x="17" y="0">Membrane Transport (11, 58)</text></g><g transform="translate(340, 190)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #9467bd;"/><text class="name" x="17" y="0">RNA Processing (11, 45)</text></g><g transform="translate(340, 210)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #17becf;"/><text class="name" x="17" y="0">Regulation And Cell Signaling (4, 16)</text></g><g transform="translate(340, 230)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #bcbd22;"/><text class="name" x="17" y="0">Miscellaneous (3, 6)</text></g><g transform="translate(340, 250)" class="key"><rect class="key-box" x="0" y="-12" style="height: 12px; width: 12px; fill: #aec7e8;"/><text class="name" x="17" y="0">Cell Envelope (2, 7)</text></g></g></g></svg></div>
         </section>
 
 
